<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/shihezi_pass_long_term_bg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/card_img"
                android:layout_width="104dp"
                android:layout_height="138dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_company"
                android:textColor="@color/color_black"
                android:textSize="9sp"
                app:layout_constraintStart_toStartOf="@id/nickname"
                app:layout_constraintTop_toBottomOf="@id/nickname" />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/label_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_company" />

            <TextView
                android:id="@+id/label_id_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_id_code"
                android:textColor="@color/color_black"
                android:textSize="9sp"
                app:layout_constraintStart_toStartOf="@id/nickname"
                app:layout_constraintTop_toBottomOf="@id/label_company" />

            <TextView
                android:id="@+id/idCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/label_id_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_id_code" />

            <TextView
                android:id="@+id/label_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_validity"
                android:textColor="@color/color_black"
                android:textSize="9sp"
                app:layout_constraintStart_toStartOf="@id/nickname"
                app:layout_constraintTop_toBottomOf="@id/label_id_code" />

            <TextView
                android:id="@+id/expiryDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/label_validity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_validity" />

            <LinearLayout
                android:id="@+id/access_area_badges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="14dp"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/statusOverlay"
            android:layout_width="120dp"
            android:layout_height="105dp"
            android:layout_gravity="bottom|end"
            android:rotation="-30"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_seal" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>
